backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greens-backend
  namespace: greens

spec:
  replicas: 2

  selector:
    matchLabels:
      app: greens-backend

  template:
    metadata:
      labels:
        app: greens-backend

    spec:
      containers:
      - name: backend
        image: vinothkumar2003/greens-tec-backend:v1
        imagePullPolicy: Always

        ports:
        - containerPort: 8080

        readinessProbe:
          httpGet:
            path: /ping
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10

        livenessProbe:
          httpGet:
            path: /ping
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
