backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: greens

spec:
  type: ClusterIP

  selector:
    app: greens-backend

  ports:
  - port: 80
    targetPort: 8080
