frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: greens

spec:
  type: ClusterIP

  selector:
    app: greens-frontend

  ports:
  - port: 80
    targetPort: 80
